# fast_rabbit

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
documentation/: CONTRIBUTING.md  DOCUMENTATION.md
examples/basic_example/: docker-compose.yml
examples/basic_example/consumer/: main.py
examples/basic_example/producer/: Dockerfile  main.py
examples/basic_routing/: README.md
examples/basic_routing/consumer/: main.py
examples/basic_routing/consumer/router/: router.py
examples/basic_routing/producer/: Dockerfile  main.py
examples/pydantic_models/: README.md  docker-compose.yml
examples/pydantic_models/consumer/: main.py
examples/pydantic_models/producer/: main.py
fast_rabbit/: __init__.py  channel_manager.py  connection_manager.py  consumer_error_handler.py  consumer_manager.py  fast_rabbit.py  fast_rabbit_router.py  logger_config.py  message_publisher.py  utils.py
tests/: docker-compose.yml  test_basic_plublish_consumer.py  test_fast_rabbit.py  test_fast_rabbit_router.py  test_multiple_messages.py  test_pydantic_models.py  test_routing.py
