[metadata]
name = fast_rabbit
version = 0.1.16
author = Shaun James Barney
author_email = shaunbarney@outlook.com
description = An asynchronous RabbitMQ client for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shaunbarney/fast_rabbit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    aio_pika
    aio_pika
    aiormq
    idna
    multidict
    pamqp
    yarl
    pydantic
